# bitsquid-foundation-git

./: .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  README.markdown
cmake/: CompilationWarning.cmake  EnableLatestCppStandard.cmake
include/foundation/: array.h  assert.h  cast.h  collection_types.h  hash.h  hstring.h  math.h  math_types.h  memory.h  memory_types.h  murmur_hash.h  sorted_range.h  string_stream.h  temp_allocator.h
src/: CMakeLists.txt  assert.cpp  math.cpp  memory.cpp  murmur_hash.cpp  string_stream.cpp  windows_lean.h
test/: CMakeLists.txt  unit_test.cpp
